--- a/index.html
+++ b/index.html
@@ -4,31 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сучасна пекарня</title>
+
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
         <nav>
             <img src="./images/logo.svg" alt="Логотип сучасної пекарні" />
              <ul>
-                <li><a href="#">Франшиза</a></li>
-                <li><a href="#">Наші традиції</a></li>
-                <li><a href="#">Формати</a></li>
-                <li><a href="#">Контакти</a></li>
+                <li><a class="link" href="#traditions-section">Наші традиції</a></li>
+                <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
+                <li><a class="link" href="#format-section">Формати</a></li>
+                <li><a class="link" href="#contact-section">Контакти</a></li>
              </ul>
         </nav>
-        <button type="button">Замовити дзвінок</button>
+        <button class="button" type="button">Замовити дзвінок</button>
     </header>
     <main>
         <section>
-            <h1>Сучасна пекарня</h1>
+            <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
         </section>
-        <section>
-            <ul>
+        <section id="traditions-section">
+            <ul class="advantages-list">
                 <li>Великий попит на ринку </li>
                 <li>Доступні за бюджетом формати</li>
                 <li>Досвідчена управлінська команда</li>
             </ul>
-            <h2>Новий формат традицій</h2>
+            <h2 class="section-title">Новий формат традицій</h2>
             <p>
                 <span>shop bakery</span> shop bakery — це пекарня, яка взяла все найкраще, і зберегла 
                 смак традиційної випічки та натуральність інгредієнтів.
@@ -41,8 +43,9 @@
             </p>
             <img src="./images/baker-man.jpg" alt="Чоловік пекар дивиться на батони з посмішкою">
         </section>
-        <section>
-            <h2>Наші найкращі шеф-кухарі</h2>
+        <section id="chefs-section">
+            <h2 class="section-title">Наші найкращі <span class="accent">шеф-кухарі</span></h2>
+            <ul>
             <li>
                 <article>
                     <h3>Настя</h3>
@@ -59,28 +62,36 @@
                 <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
             </article>
            </li>  
+        </ul>
         </section>
-        <section>
-            <h2>Формати</h2>
-            <li>
+        <section id="format-section">
+            <h2 class="section-title">Формати</h2>
+            <ul>
+                <li>
                 <article>
-                    <h3 lang="en"> Walrus</h3>
+                    <h3 lang="en">Walrus</h3>
                 </article>
             </li>
             <li>
                 <article>
-                    <h3 lang="en"> Horseshoe</h3>
+                    <h3 lang="en">Horseshoe</h3>
                 </article>
             </li>
           <li>
             <article>
-                <h3 lang="en"> Handlebar</h3>
+                <h3 lang="en">Handlebar</h3>
             </article>
           </li>
-
+        </ul>
         </section>
-        <section>
-            <h2>Приєднуйся до мережі пекарень</h2>
+        <section id="contact-section">
+            <h2 class="section-title">Приєднуйся до мережі пекарень</h2>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636289098733!2d30.4912733!3d50.4566776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1733104080754!5m2!1sru!2sua" 
+            width="603" 
+            height="595" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
 
     </main>
@@ -90,8 +101,8 @@
                 <img src="./images/logo.svg" alt="Логотип сучасної пекарні" />
             </a>
              <ul>
-                <li><a href="#">Франшиза</a></li>
                 <li><a href="#">Наші традиції</a></li>
+                <li><a href="#">Шеф-кухарі</a></li>
                 <li><a href="#">Формати</a></li>
                 <li><a href="#">Контакти</a></li>
              </ul>
@@ -115,7 +126,7 @@
             </li>
         </ul>
         <a href="#" target="_blank">Політика конфіденційності</a>
-        <p>© 2022 Дані захищені</p>
+        <p>&copy; 2022 Дані захищені</p>
     </footer>
 </body>
 </html>
