--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сучасна пекарня</title>
-
+    <!-- Fronts -->
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chonburi&family=Poppins:wght@300;400;600;900&display=swap"
+        rel="stylesheet"> -->
+    <!-- Styles -->
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -26,18 +31,18 @@
         </section>
         <section id="traditions-section">
             <ul class="advantages-list">
-                <li>Великий попит на ринку </li>
-                <li>Доступні за бюджетом формати</li>
-                <li>Досвідчена управлінська команда</li>
+                <li class="advantages-item">Великий попит на ринку </li>
+                <li class="advantages-item">Доступні за бюджетом формати</li>
+                <li class="advantages-item">Досвідчена управлінська команда</li>
             </ul>
             <h2 class="section-title">Новий формат традицій</h2>
-            <p>
-                <span>shop bakery</span> shop bakery — це пекарня, яка взяла все найкраще, і зберегла 
+            <p class="traditions-text">
+                <span class="brand uppercase">shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла 
                 смак традиційної випічки та натуральність інгредієнтів.
             </p>
-            <p>
+            <p class="traditions-text">
                 Ми працюємо як найвідоміші мережі — 
-               <span> 5 хвилин і замовлення готове. </span>
+               <span class="brand"> 5 хвилин і замовлення готове. </span>
                 А ще у наших пекарень стильний дизайн 
                 та висока якість обслуговування!
             </p>
@@ -48,7 +53,8 @@
             <ul>
             <li>
                 <article>
-                    <h3>Настя</h3>
+                    
+                    <h3 class="chef-title">Настя</h3>
                         <p>Привіт, я Настя!</p>
                         <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
                         <p>Я випічу для вас найсмачніщі вироби!</p>
@@ -56,7 +62,7 @@
             </li>
            <li>
             <article>
-                <h3>Влад</h3>
+                <h3 class="chef-title">Влад</h3>
                 <p>Привіт, я Влад!</p>
                 <p>Мій кодитерський стаж вже 18 років. SHOP BEKERY - це наша любов, з якою ми ділимось кожен раз з Вами через нашу випічку!</p>
                 <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
@@ -69,23 +75,42 @@
             <ul>
                 <li>
                 <article>
-                    <h3 lang="en">Walrus</h3>
+                    <h3 class="format-title" lang="en">Walrus</h3>
+                    <div class="format-text">
+                    <p>Площа: до 120 м2</p>
+                    <p>Меню: розширене меню</p>
+                    <p>Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2 офіціанти-різнороби</p>
+                    <p>Посадкові місця: є</p>
+                </div>
                 </article>
             </li>
             <li>
                 <article>
-                    <h3 lang="en">Horseshoe</h3>
+                    <h3 class="format-title" lang="en">Horseshoe</h3>
+                    <div class="format-text">
+                    <p>Площа: до 25 м2</p>
+                    <p>Меню: найпопулярніші позиції меню</p>
+                    <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+                    <p>Посадкові місця: відсутні</p>
+                    </div>
                 </article>
             </li>
           <li>
             <article>
-                <h3 lang="en">Handlebar</h3>
+                <h3 class="format-title" lang="en">Handlebar</h3>
+                <div class="format-text">
+                    <p>Площа: до 15 м2</p>
+                    <p>Меню: найпопулярніші позиції меню</p>
+                    <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+                    <p>Посадкові місця: відсутні</p>
+                </div>
             </article>
           </li>
         </ul>
         </section>
         <section id="contact-section">
             <h2 class="section-title">Приєднуйся до мережі пекарень</h2>
+            <p>Заповни форму, щоб ми звʼязались з тобою!</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636289098733!2d30.4912733!3d50.4566776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1733104080754!5m2!1sru!2sua" 
             width="603" 
             height="595" 
@@ -101,16 +126,16 @@
                 <img src="./images/logo.svg" alt="Логотип сучасної пекарні" />
             </a>
              <ul>
-                <li><a href="#">Наші традиції</a></li>
-                <li><a href="#">Шеф-кухарі</a></li>
-                <li><a href="#">Формати</a></li>
-                <li><a href="#">Контакти</a></li>
+                <li><a class="link" href="#">Наші традиції</a></li>
+                <li><a class="link" href="#">Шеф-кухарі</a></li>
+                <li><a class="link" href="#">Формати</a></li>
+                <li><a class="link" href="#">Контакти</a></li>
              </ul>
         </nav>
         <ul>
-            <li><a href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
-            <li><a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a></li>
-            <li><a href="https://maps.app.goo.gl/RnqraDRxLuYuomgk7" target="_blank">
+            <li><a class="adress-link" href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
+            <li><a class="adress-link" href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a></li>
+            <li><a class="adress-link" href="https://maps.app.goo.gl/RnqraDRxLuYuomgk7" target="_blank">
                 Україна, м. Київ, вул. Січових Стрільців 54
                 </a>
             </li>
@@ -125,8 +150,8 @@
                 </a>
             </li>
         </ul>
-        <a href="#" target="_blank">Політика конфіденційності</a>
-        <p>&copy; 2022 Дані захищені</p>
+        <a class="adress-link" href="#" target="_blank">Політика конфіденційності</a>
+        <p class="adress-copyright">&copy; 2022 Дані захищені</p>
     </footer>
 </body>
 </html>
