--- a/test.html
+++ b/test.html
@@ -1,46 +1,48 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test html page</title>
-</head>
-<body>
- <!-- Test table -->
- <table>
-    <thead>
-        <tr>No.</tr>
+  </head>
+  <body>
+    <!-- Test table -->
+    <table>
+      <thead>
+        <tr>
+          No.
+        </tr>
         <th>Full name</th>
         <th>Position</th>
         <th>Salary</th>
-    </thead>
-    <tbody>
+      </thead>
+      <tbody>
         <tr>
-            <td>1</td>
-            <td></td>
-            <td></td>
-            <td></td>
+          <td>1</td>
+          <td></td>
+          <td></td>
+          <td></td>
         </tr>
         <tr>
-            <td>2</td>
-            <td>Bill</td>
-            <td>Founder</td>
-            <td>1000</td>
+          <td>2</td>
+          <td>Bill</td>
+          <td>Founder</td>
+          <td>1000</td>
         </tr>
         <tr>
-            <td>3</td>
-            <td></td>
-            <td></td>
-            <td></td>
+          <td>3</td>
+          <td></td>
+          <td></td>
+          <td></td>
         </tr>
         <tr>
-            <td>4</td>
-            <td></td>
-            <td></td>
-            <td></td>
+          <td>4</td>
+          <td></td>
+          <td></td>
+          <td></td>
         </tr>
-    </tbody>
-    <!-- <tfoot></tfoot> -->
- </table>   
-</body>
+      </tbody>
+      <!-- <tfoot></tfoot> -->
+    </table>
+  </body>
 </html>
